@@ -36,7 +36,7 @@ public class CartController {
 
         List<CartItemUpdateRequest> updates = cartViewResponse.cartItems().stream()
                 .map(item -> new CartItemUpdateRequest(item.getBookId(), item.getQuantity()))
-                .collect(Collectors.toList());
+                .toList();
 
         CartUpdateQuantitiesRequest cartUpdateQuantitiesRequest = new CartUpdateQuantitiesRequest();
         cartUpdateQuantitiesRequest.setUpdates(updates);
@@ -91,6 +91,7 @@ public class CartController {
         cookie.setHttpOnly(true);
         cookie.setPath("/");
         cookie.setMaxAge(60 * 60 * 24 * 30); // 30 days
+        cookie.setSecure(true);
         response.addCookie(cookie);
     }
 }
